# nem-battery-sim

./: .env.example  .gitignore  CLAUDE.md  README.md  log.md  pyproject.toml
notebooks/: 01_smoke_test_price_sources.ipynb  02_price_event_20260708.ipynb
src/nem_battery_sim/: __init__.py
